# testjob_alytics

./: README.md  pyproject.toml
alytics/conf/: asgi.py  settings.py  wsgi.py
alytics/main/: models.py
