[tool.poetry]
name = "testjob_alytics"
version = "0.1.0"
description = "Тестовое задание на вакансию питониста"
authors = ["Aleksandr <lvar-8@ya.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
